assets/scss/main.scss
@import 'tokens';
@import 'themes';
@import 'variables';
@import 'mixins';
@import 'fonts';
@import 'reset';

html {
    background-color: $color-background;
    font-size: $font-size;
}

body {
    background-color: $color-background;
    border-top: $layout-border-top-width solid $color-primary;
    color: $font-color;
    font-family: $font-family-serif;
    font-feature-settings: "kern", "liga", "clig", "calt";
    font-kerning: normal;
    font-size: 1em;
    font-variant-ligatures: common-ligatures contextual;
    line-height: $line-height;
    text-rendering: optimizeLegibility;
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--font-family-heading);
    font-weight: 700;
    margin: 1.5rem 0 .345rem 0;
    text-wrap: balance;
}

p {
    margin-bottom: 1.5rem;
}

a {
    &:link,
    &:visited {
        color: $link-color;
        text-decoration: underline;
        text-decoration-thickness: .1rem;
        text-underline-offset: .15em;
        transition: color 0.2s;
    }

    &:hover,
    &:active {
        color: $link-color-hover;
    }

    &:focus-visible {
        color: $link-color-hover;
        @include focus-ring;
    }
}

pre,
code,
kbd {
    font-family: $font-family-fixed;
    font-size: .9rem;
}

kbd {
    font-style: italic;
}

pre {
    background-color: $color-alt;
    margin: 1rem 0;
    overflow-x: auto;
    padding: 2%;

    & > code {
        color: $code-color;
        display: block;
    }
}

svg {
    color: inherit;
    fill: currentColor;
}

img {
    display: block;
}

.vault-image {
    display: block;
    max-width: 100%;

    img {
        display: block;
        height: auto;
        max-width: 100%;
    }
}

img.vault-image {
    height: auto;
}

hr {
    border-bottom: 1px solid var(--color-border-light);
    border-width: 0 0 .1rem 0;
    margin: 1.5rem 0;
}

em {
    font-style: italic;
}

strong {
    font-weight: 700;
}

sup,
sub {
    font-size: .75rem;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}

sup {
    inset-block-start: -.5rem;
    inset-inline-start: .25rem;
}

sub {
    bottom: -0.5em;
}

main {
    padding: 1em 1em 2em;
    position: relative;
}

::selection {
    background: $color-primary;
    color: var(--color-selection-text);
}


article {
    & > h1 {
        font-size: clamp(2rem, calc(1.7rem + 1.2vw), 2.3rem);
    }

    & > h2 {
        font-size: clamp(1.65rem, calc(1.45rem + 0.9vw), 1.85rem);
        line-height: 1.2;
    }

    & > h3 {
        font-size: clamp(1.35rem, calc(1.2rem + 0.6vw), 1.5rem);
    }

    & > h4 {
        font-style: italic;
        font-weight: 400;
    }

    ol, ul {
        margin: 1.5rem 0 1.5rem 1rem;
        list-style: none;
    }

    ol {
        counter-reset: start-from 0;

        li {
            &::before{
                counter-increment: start-from;
                content: counter(start-from) ".";
                margin-top: .05rem;
            }
        }
    }

    ul li {
        &::before {
            content: "▪";
            font-weight: bold;
        }
    }

    li {
        position: relative;

        & > ul,
        & > ol {
            margin: 0 0 0 1.5rem;
        }

        &::before {
            color: $color-primary;
            font-family: $font-family-sans;
            font-weight: normal;
            inset-inline-start: -5em;
            padding-inline-end: 0.5em;
            position: absolute;
            text-align: end;
            width: 5em;
        }
    }

    blockquote {
        @include surface;
        border-inline-start: .1rem solid $color-secondary;
        font-family: $font-family-sans;
        padding: 1rem;
        margin-inline-start: -1rem;
        text-wrap: pretty;

        p:last-of-type  {
            margin-bottom: 0;
        }
    }

    figure {
        font-family: $font-family-sans;
        margin: 1.5rem 0;

        & > * {
            @include surface;
            display: block;
            padding: 1rem;
        }

        img {
            max-width: 100%;
            height: auto;
        }
    }

    figcaption {
        @include surface;
        font-size: $font-size-small;
        margin-top: -1rem;
        padding: .5rem 1rem;
        text-wrap: pretty;

        :last-child {
            margin-bottom: 0;
        }
    }
}

table {
    border-collapse: collapse;
    width: 100%;

    td,th {
        padding: .5rem;
        border-bottom: 1px solid var(--color-border-light);
    }

    th {
        font-weight: 600;
        text-align: start;
    }

    &.bordered {
        td,th {
            border: 1px solid var(--color-border-light);
        }
    }
}

header {
    .description {
        margin: .5rem 0;
    }
}

#home-welcome,
header {
    h1 {
        @include page-header-title;
    }
}

.site-layout {
    display: grid;
    grid-template-rows: auto 1fr auto;
    min-block-size: calc(100dvh - #{$layout-border-top-width});
}

.site-container {
    margin: 0 auto;
    padding: 1em;
    width: 95vw;
}

@include screen-lrg {
    .site-container {
        max-width: 1200px;
        width: 65vw;
    }
}

.description {
    font-family: $font-family-serif;
    font-size: .9rem;
    font-style: italic;
    font-weight: normal;
    line-height: 1.5rem;
    text-wrap: pretty;
}

.metadata {
    color: var(--color-text);
    font-family: $font-family-sans;
    font-size: $font-size-small;

    &:not(.browse):not(.pagination) {
        opacity: 0.7;
    }
}

.page {
    & > header {
        margin-bottom: 1rem;

        & > * + * {
            margin-top: 1rem;
        }
    }
}

.post {
    :not(pre) > code {
        color: var(--color-primary);
    }

    footer {
        clear: both;
        font-family: $font-family-sans;
        font-size: .75rem;
        margin-top: 1rem;

        ul {
            margin: 0 0 .5rem;
        }

        li::before {
            content: "";
        }
    }

    .taxonomy {
        display: inline;

        li {
            display: inline;
            position: relative;

            &::after {
                content: ",";
            }

            &:last-child::after {
                content: "";
            }

            a {
                text-decoration: none;
                opacity: 0.7;

                &:link,
                &:visited {
                    color: var(--color-text);
                }

                &:hover,
                &:active {
                    color: $link-color;
                    opacity: 1;
                }

                &:focus-visible {
                    color: $link-color;
                    opacity: 1;
                    @include focus-ring;
                }
            }
        }
    }
}

@include screen-lrg {
    .browse {
        display: grid;
        grid-template-columns: 55% auto 40%;

        .taxonomy {
            grid-column: 3;
        }
    }

    .dual {
        display: grid;
        gap: 1rem;
        grid-auto-columns: 50fr 50fr;
        grid-auto-flow: column;

        figure {
            margin: 0;
            max-width: 100%;
        }
    }

    figure.small {
        float: right;
        margin: 0 0 1rem 1rem;
        max-width: 50%;
    }

    .dual,
    article > figure.normal,
    .highlight {
        width: 110%;
        margin-left: -5%;
    }
}

.teaser {
    border-color: var(--color-border-lighter);
    border-style: solid;
    border-width: 0 0 1px;
    font-size: 1rem;
    padding: .5rem 0;

    @include screen-med {
        time {
            float: right;
        }
    }

    .title {
        margin: 0;
    }

    .description {
        margin: 0;
    }

    a {
        text-decoration: none;
    }

    time {
        font-size: $font-size-small;
        opacity: 0.7;
    }
}

.section-group {
    border-color: $font-color;
    border-style: solid;
    border-width: .125rem 0 .0;
    margin-top: 2rem;

    .section-title {
        color: $font-color;
        border-color: $font-color;
        border-style: solid;
        border-width: 0 0 .1rem;
        margin: 0;
        padding: .325rem 0;
        text-transform: uppercase;
    }

    a {
        text-decoration: none;

        span {
            display: block;
        }
    }
}

.taxonomy-list {
    li {
        border-bottom: 1px solid var(--color-border-light);

        @include screen-medm {
            float: left;
            width: 48%;

            &:nth-child(2n) {
                margin-left: 4%;
            }
        }

        & > a {
            display: block;
            padding: 5px 5px 5px 0;
            position: relative;
            text-transform: uppercase;
        }
    }

    .taxonomy-count {
        position: absolute;
        right: 0;
        top: .3rem;
    }

    &::after {
        clear: both;
        content: "";
        display: table;
    }
}

.copyright {
    font-family: $font-family-sans;
    font-size: $font-size-small;
}

.icon {
    height: 1rem;
    width: 1rem;
    vertical-align: middle;

    &.large {
        height: 2rem;
        width: 2rem;
    }

    &.small {
        height: .75rem;
        width: .75rem;
    }

    &.left {
        float: left;
        margin-right: .25rem;
    }

    &.right {
        float: right;
        margin-left: .25rem;
    }
}

.pagination {
    display: grid;
    grid-template-columns: 30% auto 30%;
    margin-top: 1.5rem;

    .previous {
        grid-column: 1;
        text-align: start;
    }

    span {
        grid-column: 2;
        text-align: center;
    }

    .next {
        grid-column: 3;
        text-align: end;
    }
}

#site-header {
    font-family: $font-family-sans;
    text-align: center;
    text-transform: uppercase;

    a {
        text-decoration: none;
    }

    li {
        display: inline;
        padding: 0 .25rem;
    }

    @include screen-medm {
        li {
            padding: 0 .5rem;
        }
    }

    .branding {
        float: left;
    }

    @include screen-medm {
        & {
            text-align: right;
        }
    }
}

#site-footer {
    background-color: $footer-background-color;
    color: $footer-color;

    &::before {
        background-color: $footer-background-color;
        content: "";
        inset-inline: 0;
        inset-block-start: 2em;
        min-block-size: calc(100dvh - 2em);
        position: absolute;
        z-index: -1;
    }

    a {
        opacity: 0.7;

        &:link,
        &:visited {
            color: var(--color-footer-text);
        }

        &:hover,
        &:active {
            color: $link-color;
            opacity: 1;
        }
    }

    p:only-child {
        margin: 0;
    }
}

#home-welcome {
    p {
        margin: 1rem 0;
    }
}

// Theme Selector
// --------------------------------------------------------
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border-width: 0;
}

.theme-toggle {
    position: relative;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    padding: 0 .25rem;
    cursor: pointer;
    color: var(--color-text);
    vertical-align: middle;

    &:focus-visible {
        @include focus-ring;
    }

    @media (min-width: 768px) {
        padding: 0 .5rem;
    }

    svg {
        width: 18px;
        height: 18px;
        transition: scale 300ms ease-in-out, rotate 500ms cubic-bezier(0.4, 0, 0.2, 1);
    }

    #sun-icon {
        position: absolute;
        scale: 1;
    }

    #moon-icon {
        scale: 0;
        rotate: 0turn;
    }
}

:root:has(input#theme-toggle:checked),
:root.dark {
    @each $role, $slot in $semantic {
        --#{$role}: #{palette-get("vault-dark", $slot)};
    }

    .theme-toggle {
        color: var(--color-primary);

        #sun-icon {
            scale: 0;
        }

        #moon-icon {
            scale: 1;
            rotate: 1turn;
        }
    }
}

